# BluetoothController-Qt

./: .gitignore  Bluetooth.pro  CMakeLists.txt  README.md  qml.qrc  setcap.sh
examples/BluetoothChat/: btchat.pro
src/: bluetoothdevicesmodel.cpp  bluetoothdevicesmodel.h  bluetoothmanager.cpp  bluetoothmanager.h  chatclient.h  chatmanager.cpp  chatmanager.h  chatserver.cpp  chatserver.h  common.h  main.cpp  messagesmodel.h
src/BluetoothController/: bluetoothdevicesmodel.cpp  bluetoothdevicesmodel.h  bluetoothservicescanner.cpp  bluetoothservicescanner.h  listservicesmodel.cpp  listservicesmodel.h
src/ChatController/: chatclient.cpp  chatserver.cpp  chatserver.h  messagesmodel.cpp
ui/: Main.qml
ui/components/: Button.qml
ui/screens/: ChatScreen.qml  ConnectScreen.qml
